<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@mipmap/res_background">

    <FrameLayout
        android:id="@+id/event_container"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="4dp"
        android:layout_above="@+id/center"
        android:background="@drawable/rectengle_white"
        android:clickable="true"
        android:foreground="?selectableItemBackground">

        <TextView
            android:id="@+id/frs_tv_event"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            android:hint="@string/label_event"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp" />

    <FrameLayout
        android:id="@+id/contest_container"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/center"
        android:padding="4dp"
        android:background="@drawable/rectengle_white"
        android:clickable="true"
        android:foreground="?selectableItemBackground">

        <TextView
            android:id="@+id/frs_tv_contest"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/label_contest"
            android:layout_height="wrap_content" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/frs_btn_search"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_below="@+id/contest_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/rectengle_white"
        android:clickable="true"
        android:foreground="?selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_light"
            android:text="@string/label_search" />

    </FrameLayout>

    <TextView
        android:id="@+id/participating_countries"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_world"
        android:drawableStart="@drawable/ic_world"
        android:drawablePadding="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_participating_countries"
        android:textSize="18sp"
        android:textColor="@color/text_dark"
        android:layout_height="wrap_content" />


</RelativeLayout>