<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@mipmap/res_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/label_facebook"
            android:textColor="@color/text_dark_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_twitter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/label_twitter"
            android:textColor="@color/text_dark_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_instagram" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/label_instagram"
            android:textColor="@color/text_dark_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/odnoklassniki"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_odnoklassniki" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/label_odnoclassniki"
            android:textColor="@color/text_dark_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vk"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_vk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/label_vk"
            android:textColor="@color/text_dark_second" />
    </LinearLayout>

</LinearLayout>