<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/label_select_language"
            android:textColor="@color/text_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectengle_white"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/al_select_ru"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_ru_menu"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_ru_menu"
                    android:text="@string/label_russian" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <FrameLayout
                android:id="@+id/al_select_en"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_en_menu"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_en_menu"
                    android:text="@string/label_english" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>