<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    android:background="@mipmap/image"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/label_february"
        android:textColor="@color/text_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/vw_tv_day_container23"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_finish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_thursday"
                android:textColor="@color/text_dark_second" />

            <TextView
                android:id="@+id/vw_tv_day23"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/sl_bg_day"
                android:enabled="false"
                android:gravity="center"
                android:text="23"
                android:textColor="@drawable/sl_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vw_tv_day_container24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/label_friday"
                android:textColor="@color/text_dark_second" />

            <TextView
                android:id="@+id/vw_tv_day24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/sl_bg_day"
                android:enabled="false"
                android:gravity="center"
                android:text="24"
                android:textColor="@drawable/sl_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vw_tv_day_container25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/label_saturday"
                android:textColor="@color/text_dark_second" />

            <TextView
                android:id="@+id/vw_tv_day25"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/sl_bg_day"
                android:enabled="false"
                android:gravity="center"
                android:text="25"
                android:textColor="@drawable/sl_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vw_tv_day_container26"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/label_sunday"
                android:textColor="@color/text_dark_second" />

            <TextView
                android:id="@+id/vw_tv_day26"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/sl_bg_day"
                android:enabled="false"
                android:gravity="center"
                android:text="26"
                android:textColor="@drawable/sl_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vw_tv_day_container27"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_air" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/label_monday"
                android:textColor="@color/text_dark_second" />

            <TextView
                android:id="@+id/vw_tv_day27"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/sl_bg_day"
                android:enabled="false"
                android:gravity="center"
                android:text="27"
                android:textColor="@drawable/sl_text" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>