<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@id/container_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:theme="@style/AppTheme.DarkPopupOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="8dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/ar_tv_event"
                            android:layout_width="wrap_content"
                            tools:text="Скалолазание"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/ar_tv_contest"
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            tools:text="Женская квалификация"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <RelativeLayout
                android:id="@+id/main_container"
                android:background="@mipmap/res_background"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/ir_tv_place"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/text_dark_second"
                    android:textSize="13sp"
                    android:text="@string/label_score_place"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/ir_iv_country"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark_second"
                    android:textSize="13sp"
                    android:text="@string/label_country"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ir_tv_place"
                    android:layout_toRightOf="@+id/ir_tv_place" />

                <TextView
                    android:id="@+id/ir_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/ir_iv_country"
                    android:layout_toLeftOf="@+id/ir_tv_score"
                    android:layout_toRightOf="@+id/ir_iv_country"
                    android:layout_toStartOf="@+id/ir_tv_score"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_dark_second"
                    android:textSize="13sp"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/ir_tv_score"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_dark_second"
                    android:textSize="13sp"
                    android:text="@string/label_score" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>